# llm-manager-ui

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-publish.yaml
llmm/: __init__.py  api.py  config.py  env.py  events.py  extensions.py  routes.py  start.py
llmm/services/: endpoints.py  ollama.py
llmm/services/system/: log.py
llmm/static/css/: icons.css  main.css
llmm/static/js/: app.js  chat.js  endpoints.js  icons.js  models.js  requests.js  utils.js
llmm/templates/: head.jinja2  main.jinja2
