[build-system]
requires = [ "hatchling >= 1.26", "hatch-requirements-txt" ]
build-backend = "hatchling.build"


[project]
name = "llm-manager-ui"
version = "1.0.1"
description = "Web UI to manage Ollama LLM server models"
dynamic = [ "dependencies" ]


[[project.authors]]
name = "bitdruid"
email = "bitdruid@outlook.com"


[project.urls]
homepage = "https://github.com/bitdruid/llm-manager-ui"


[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.metadata.hooks.requirements_txt]
file = "requirements.txt"


[tool.hatch.build.targets.wheel]
packages = [ "llmm" ]


[tool.djlint]
profile = "jinja"
max_line_length = 120
max_attribute_length = 120
format_js = true
format_css = true
indent = 20
use_gitignore = true
line_break_after_multiline_tag = true
max_blank_lines = 5


[tool.ruff]
line-length = 120
